src/test/deca/context/valid/provided/Subtypeverif2.deca
class A {
}
class B extends A{
A boom(int x){}
}
class C extends B{
B boom(int x){}
}
