src/test/deca/context/invalid/provided/testi17.deca
//Resultats :
//Erreur contextuelle
//Ligne 12: Invalid cast
class A{}
class B extends A{}
class C{}
{
    A a = new A();
    B b = new B();
    C c = new C();
    a = (B)(a);
    c = (C)(a);
}